[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Entities/Circle_(Player)/Circle_(Player).tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Structures/The_Core/The_Core.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main_Scene_(World)/Plombit_yawn_3.jpg" type="Texture" id=3]
[ext_resource path="res://Main_Scene_(World)/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main_Scene_(World)/World.gd" type="Script" id=5]
[ext_resource path="res://Main_Scene_(World)/ExpandingBack.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main_Scene_(World)/Camera.gd" type="Script" id=7]

[node name="The World" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 82, 1027 )
texture = ExtResource( 3 )

[node name="ExpandingBack" parent="." instance=ExtResource( 6 )]
position = Vector2( 513, 200 )
scale = Vector2( 5, 5 )

[node name="Circle_(Player)" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 350 )

[node name="The_Core" parent="." instance=ExtResource( 2 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 350 )
current = true
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="UI" parent="Camera2D/CanvasLayer" instance=ExtResource( 4 )]

[node name="EssenceSpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="EssenceSpawnTimer" to="." method="_on_EssenceSpawnTimer_timeout"]
